# fastapi_cqrs

./: README.md  pyproject.toml  read_db.db  start.sh  write_db.db
app/: __init__.py  middleware.py  schemas.py  services.py  write_db.db
app/api/: deps.py
app/api/endpoints/: __init__.py
app/core/: config.py  database.py
app/models/: __init__.py
