[tool.poetry]
name = "fastapi-cqrs"
version = "0.1.0"
description = "CQRS pattern using FastAPI"
authors = ["ArmanGrewal007 <armansinghgrewal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
pydantic = "^2.10.6"
typer = "^0.15.2"
pydantic-settings = "^2.8.1"
colorlog = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
